--- a/bower.json
+++ b/bower.json
@@ -15,11 +15,11 @@
     	}
   	],
   	"devDependencies": {
-    	"fastclick": "~1.0.3",
-    	"html5shiv": "~3.7.2",
-    	"lazysizes": "aFarkas/lazysizes#~0.7.1",
-    	"owl.carousel": "https://github.com/smashingboxes/OwlCarousel2.git",
-    	"requirejs": "~2.1.15",
-    	"scrollMonitor": "https://github.com/sakabako/scrollMonitor.git#~1.0.12"
+	    "fastclick": "~1.0.3",
+	    "html5shiv": "~3.7.2",
+	    "lazysizes": "https://github.com/aFarkas/lazysizes.git#~0.9.0",
+	    "owl.carousel": "https://github.com/smashingboxes/OwlCarousel2.git",
+	    "requirejs": "~2.1.15",
+	    "scrollMonitor": "https://github.com/sakabako/scrollMonitor.git#~1.0.12",
   	}
 }
